@@ -2,6 +2,8 @@
 
 ## [0.2.1] - 2019-12-xx
 
+* Add `IntoPatterns` trait
+
 * Add multi-pattern resources
 
 ## [0.2.0] - 2019-12-07
